[package]
name = "pixure"
version = "0.1.0"
authors = ["Malaury <malaurydutour@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
actix-session = "0.5.0-beta.1"
mongodb = "2.0.0-alpha.1"
once_cell = "1.7.2"
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["full"] }
serde = "1.0.125"
reqwest = {version="0.11.2", features = ["json", "stream", "multipart"]}
bytes = "1.0.1"
futures-core = "0.3.13"
async-trait = "0.1.48"
thiserror = "1.0.24"
actix-multipart = "0.4.0-beta.4"
static_init = "1.0.0"
cached = "0.23.0"
mime = "0.3.16"
sanitize-filename = "0.3.0"
anyhow = "1.0.40"
ring = "0.16.20"